--- a/about.html
+++ b/about.html
@@ -10,16 +10,16 @@
   <body>
     <header>
       <p>Welcome to the website of Kendriya Vidyalaya</p>
-      <img src="assets/Screenshot 2021-05-05 105344.png" alt="" width="100%" />
+      <img src="/kvbyadion/assets/Screenshot 2021-05-05 105344.png" alt="" width="100%" />
       <nav class="adi">
         <ul class="adi">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="think.html">What do I think?</a></li>
+          <li><a href="/kvbyadion/index.html">Home</a></li>
+          <li><a href="/kvbyadion/about.html">About</a></li>
+          <li><a href="/kvbyadion/think.html">What do I think?</a></li>
         </ul>
         <section>
           <img
-            src="assets/Screenshot 2021-05-05 112229.png"
+            src="/kvbyadion/assets/Screenshot 2021-05-05 112229.png"
             alt=""
             width="100%"
             height="50%"
@@ -27,7 +27,7 @@
         </section>
         <section>
           <img
-            src="assets/Screenshot 2021-05-05 111835.png"
+            src="/kvbyadion/assets/Screenshot 2021-05-05 111835.png"
             alt=""
             width="100%"
             height="50%"
