--- a/think.html
+++ b/think.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/kvbyadion/style.css" />
     <title>Dummy Kendriya Vidyalaya Website | HOME</title>
   </head>
   <body>
     <header>
       <p>Welcome to the website of Kendriya Vidyalaya</p>
-      <img src="assets/Screenshot 2021-05-05 105344.png" alt="" width="100%" />
+      <img src="/kvbyadion/assets/Screenshot 2021-05-05 105344.png" alt="" width="100%" />
       <nav class="adi">
         <ul class="adi">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="think.html">What do I think?</a></li>
+          <li><a href="/kvbyadion/index.html">Home</a></li>
+          <li><a href="/kvbyadion/about.html">About</a></li>
+          <li><a href="/kvbyadion/think.html">What do I think?</a></li>
         </ul>
       </nav>
     </header>
